<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context=".SettingsActivity">



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_small"
            android:text="@string/settings"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_medium"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_mini" />

        <Switch
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingLeft="@dimen/padding_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="23dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_mini" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share_icon"
            android:paddingLeft="@dimen/padding_small"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="13dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_support"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_mini" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/support_icon"
            android:paddingLeft="@dimen/padding_small"
            android:src="@drawable/ic_support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:layout_editor_absoluteX="22dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_mini" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/agreement_icon"
            android:paddingLeft="@dimen/padding_small"
            android:src="@drawable/ic_agreement" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
