<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/padding_medium">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_medium"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Контейнер для кнопок -->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Кнопка Поиск -->
        <LinearLayout
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:padding="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Кнопка Медиатека -->
        <LinearLayout
            android:id="@+id/btn_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:padding="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_library"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Кнопка Настройки -->
        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:padding="@dimen/padding_medium"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



